Generate `GradleProject` class during build for dynamic app metadata